# Fathometer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  THIRD-PARTY-NOTICES.md  alembic.ini  dev_server.py  docker-compose.yml  mypy.ini  probe_gpt_oss.py  probe_response_format.py  pyproject.toml  pytest.ini  ruff.toml
.claude/agents/: backend-implementer.md  frontend-implementer.md  reviewer.md  security-auditor.md  test-writer.md
.github/workflows/: cla.yml  release.yml
agent/: README.md  fathometer-agent.sh  fathometer-register.sh  fathometer-uninstall.sh  lib_host_state.sh  secscan-agent.sh  secscan-register.sh
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_initial_schema.py  0003_block_n_agent_and_finding_cause.py  0004_block_o_risk_and_host_state.py  0005_block_p_llm_groups_jobs_cache.py  (+23 more)
app/: __init__.py  audit.py  auth.py  config.py  db.py  forms.py  health.py  logging_setup.py  models.py  security.py  settings_service.py
docs/: SECURITY-AUDIT-2026-05-16.md  operations.md  techdebt.md
frontend/: esbuild.config.mjs  package-lock.json  package.json
scripts/: e2e_smoke.sh  entrypoint.sh  k8s-debug-db.yaml  reset_block_t_clean.sql
tests/: _helpers.py  conftest.py  test_app_factory.py  test_asset_manifest.py  test_fathometer_version_context.py  test_health.py  test_import_side_effects.py  test_logging_redaction.py  test_secscan_version_context.py  test_theme_cookie.py  test_ui_language.py  test_upstream_check_form.py
(+771 files in other folders)
