[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fathometer"
version = "0.1.0"
description = "Selbst-gehostete Web-App für Trivy-Filesystem-Scans"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "THEKROLL LTD" }]

# Runtime-Dependencies — Stack-Konstanten siehe CLAUDE.md
dependencies = [
    "flask>=3.0",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "flask-login>=0.6",
    "flask-limiter>=3.7",
    "flask-wtf>=1.2",
    "structlog>=24.1",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
    "openai>=1.30",
    "nh3>=0.2",
    "httpx>=0.27",
    "gunicorn>=22.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*", "agent*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "templates/**/*.html", "static/**/*"]
